handle scrollbar issue

--- a/scss/moove/_mydashboard.scss
+++ b/scss/moove/_mydashboard.scss
@@ -92,3 +92,13 @@
         }
     }
 }
+@media (min-width: 992px) {
+    #page-wrapper{
+        position: relative;
+        overflow-y: auto;
+        transition: 0.2s;
+        height: calc(100vh);
+        left: 0;
+        right: 0;
+    }
+}
