--- a/style/customCSS.css
+++ b/style/customCSS.css
@@ -1301,3 +1301,13 @@ body:not(.editing) #page .admininfos .breadcrumb-button .singlebutton button.btn
     color: #000;
     border: none;
 }
+@media (min-width: 992px) {
+    #page-calendar-view #page-wrapper {
+        position: relative;
+        overflow-y: auto;
+        transition: 0.2s;
+        height: calc(100vh);
+        left: 0;
+        right: 0;
+    }
+}
